update mouse brain bin

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ data/seqFISH.h5ad
 data/SeqScope.h5ad
 data/E8-10_b_S21.h5ad
 data/E8-10_b_S22.h5ad
+data/mousebrain_bin60_results_att8_spa3.h5ad
+data/mousebrain_bin60_test.h5ad
+data/mousebrain_bin60_results_att8_spa3_aggr.h5ad
+data/mousebrain_bin60_results_att8_spa3_aggr.h5ad
