--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ data/mousebrain_bin60_results_att8_spa3.h5ad
 data/mousebrain_bin60_test.h5ad
 data/mousebrain_bin60_results_att8_spa3_aggr.h5ad
 data/mousebrain_bin60_results_att8_spa3_aggr.h5ad
+data/mousebrain_bin60_results_att8_spa3_aggr.h5ad
