--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ data/mousebrain_bin60_results_att8_spa3_aggr.h5ad
 data/mousebrain_bin60_results_att8_spa3_aggr.h5ad
 data/mousebrain_bin60_results_att8_spa3_aggr.h5ad
 data/mousebrain_bin60_results_att8_spa3_aggr.h5ad
+data/A549_TGFB1.h5ad/__MACOSX/._A549_TGFB1.h5ad
+data/A549_TGFB1.h5ad/A549_TGFB1.h5ad
+data/mousebrain_bin60_results_att5_spa3.h5ad
