update pathway plotting

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,13 @@ data/mousebrain_bin60_results_att8_spa3_aggr.h5ad
 data/A549_TGFB1.h5ad/__MACOSX/._A549_TGFB1.h5ad
 data/A549_TGFB1.h5ad/A549_TGFB1.h5ad
 data/mousebrain_bin60_results_att5_spa3.h5ad
+data/A549_TGFB1.h5ad
+data/A549_TGFB1.h5ad.zip
+data/A549_TGFB1.h5ad.zip
+data/results_unit.h5ad
+data/results_celldancer.h5ad
+example_notebooks/toggle_results.h5ad
+example_notebooks/toggle_results.h5ad
+example_notebooks/toggle_results.h5ad
+example_notebooks/toggle_results.h5ad
+example_notebooks/toggle_results.h5ad
